fix(pinterest): pin discover bubble text visibility

--- a/styles/pinterest/catppuccin.user.less
+++ b/styles/pinterest/catppuccin.user.less
@@ -607,6 +607,11 @@
       }
     }
 
+    // pin discover bubble
+    div[data-test-id="discover-bubble"] div div {
+      color: if(@flavor = latte, @base, @text) !important;
+    }
+
     // comment bar
     div[data-test-id='comment-editor-container'] {
       color: @text !important;
